feat/auth: refactored version of auth still wip